--- a/pybo/templates/base.html
+++ b/pybo/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{url_for('static',filename='bootstrap.min.css')}}">
     <!--pybo CSS-->
     <link rel="stylesheet" href="{{url_for('static',filename='style.css')}}">
-    <title>Hello, pybo!</title>
+    <title>빠이보</title>
 </head>
 <body>
 {% include "navbar.html" %}
