--- a/pybo/templates/navbar.html
+++ b/pybo/templates/navbar.html
@@ -1,7 +1,7 @@
 <!-- 내비게이션 바-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <a class="navbar-brand" href="{{url_for('main.index')}}">Pybo</a>
-    <button class="navbar-toggler ml-auto" type="button" data-toggle="callapse" data-target="#navbarNav" aria-controls="navbarNav"
+    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
             aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
